[gd_scene load_steps=5 format=2]

[ext_resource path="res://assests/enemies/shooter_enemy.png" type="Texture" id=1]
[ext_resource path="res://scripts/shooter_enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33.7079, 39 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27, 39 )

[node name="shooter_enemy" type="RigidBody2D" groups=["enemy"]]
collision_layer = 4
script = ExtResource( 2 )

[node name="shooter_enemy" type="Sprite" parent="."]
scale = Vector2( 0.800725, 0.744668 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.801, 1 )
shape = SubResource( 1 )

[node name="shooter_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="shooter_area"]
shape = SubResource( 2 )

[node name="gun_pos" type="Position2D" parent="."]
unique_name_in_owner = true
position = Vector2( 0, 65 )

[node name="shoot_timer" type="Timer" parent="."]
wait_time = 0.7

[connection signal="body_entered" from="shooter_area" to="." method="_on_shooter_area_body_entered"]
[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]
